# quantrun

./: .gitignore  README.md  main.py  pyproject.toml  run.bat  run.sh  test_system.py
docs/: API.md  brokers.md
frontend/: package-lock.json
frontend/src/: App.css  App.tsx  config.ts  index.css
frontend/src/components/: AuthScreen.tsx  ChartBrowser.tsx  CoinIcon.tsx  Dashboard.tsx  PortfolioDetail.tsx  TokenManager.tsx  TradingTerminal.tsx
frontend/src/context/: AuthContext.tsx
paper/: auth.py  main.py
paper/db/: __init__.py  database.py  models.py
paper/services/: __init__.py  exceptions.py  execution_engine.py  market_data.py  portfolio_manager.py  websocket.py
paper/services/brokers/: README.md  __init__.py  base.py  registry.py
paper/services/brokers/crypto/: binance.py
paper/services/symbols/: config.py  mapper.py
quantrun/: db.sqlite3  db.sqlite3-shm  db.sqlite3-wal  manage.py
quantrun/dashboard/: admin.py  models.py  urls.py  views.py
quantrun/dashboard/migrations/: 0001_initial.py  0002_portfolio_description_alter_order_limit_price_and_more.py  0003_order_limit_price_nullable.py  0004_apitoken.py  0004_remove_position_current_price_and_more.py  0005_rename_average_price_position_entry_price.py  0006_merge_20260517_1105.py  0006_merge_20260518_1439.py
quantrun/dashboard/templates/dashboard/: base.html  order_form.html  portfolio_confirm_delete.html  portfolio_detail.html  portfolio_form.html  portfolio_list.html  token_list.html
quantrun/quantrun/: asgi.py  settings.py  urls.py  wsgi.py
(+2 files in other folders)
