[project]
name = "quant-run"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "binance-sdk-spot>=8.4.0",
    "django>=6.0.5",
    "django-cors-headers>=4.9.0",
    "fastapi[standard]>=0.136.1",
    "httpx>=0.28.1",
    "pyjwt>=2.8.0",
    "sqlmodel>=0.0.38",
    "tabulate>=0.10.0",
    "websockets>=15.0.1",
]
